testdata/baselines/reference/submodule/conformance/jsdocTypeReferenceToMergedClass.errors.txt
jsdocTypeReferenceToMergedClass.js(2,12): error TS2749: 'Workspace.Project' refers to a value, but is being used as a type here. Did you mean 'typeof Workspace.Project'?


==== jsdocTypeReferenceToMergedClass.js (1 errors) ====
    var Workspace = {}
    /** @type {Workspace.Project} */
               ~~~~~~~~~~~~~~~~~
!!! error TS2749: 'Workspace.Project' refers to a value, but is being used as a type here. Did you mean 'typeof Workspace.Project'?
    var p;
    p.isServiceProject()
    
    Workspace.Project = function wp() { }
    Workspace.Project.prototype = {
      isServiceProject() {}
    }
    